After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767892 - item-manager: Fix the lifetime of the changes-pending handler
item-manager: Fix the lifetime of the changes-pending handler
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.20.x
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-06-20 22:22 UTC by Inactive account
Modified: 2016-06-22 10:26 UTC
See Also:
GNOME target: ---
GNOME version: 3.19/3.20


Attachments
item-manager: Fix the lifetime of the changes-pending handler (1.76 KB, patch)
2016-06-21 16:41 UTC, Debarshi Ray
committed Details | Review

Description Inactive account 2016-06-20 22:22:03 UTC
After upgrading to GNOME 3.20 on Ubuntu GNOME 16.04 I have found that it is reported to me randomly that gnome-photos has crashed even though I have not launched gnome-photos in the current session (it seems that it is always running in the background). So it seems to just randomly crash and exit in the background. The error message I am provided with is:

    gnome-photos crashed with SIGABRT in g_assertion_message()

This issues was already filed downstream by somebody else: https://bugs.launchpad.net/ubuntu-gnome/+bug/1568043 But I thought that as I couldn't find any reports upstream on the issue that I should file one here.
Comment 1 Debarshi Ray 2016-06-21 16:17:08 UTC
Here is a stack trace from the downstream bug:
https://launchpadlibrarian.net/252885058/StacktraceSource.txt

Since you haven't explicitly started the application, it sounds like it is the gnome-shell search provider that is crashing.

I am curious if the PhotosItemManager instance is getting destroyed (ie. photos_item_manager_dispose is being called) while it is still being used.

You can set it up as:
$ gdb /usr/bin/gnome-photos
$ break photos_item_manager_dispose
$ run --gapplication-service

And then go the gnome-shell overview and type something.

When it crashes it will also be interesting to look at the value of self->priv->objects in photos_base_manager_get_object_by_id. If PhotosItemManager has already been destroyed, it will be NULL.
Comment 2 Debarshi Ray 2016-06-21 16:41:08 UTC
Created attachment 330146 [details] [review]
item-manager: Fix the lifetime of the changes-pending handler

Does this help? Can you try running with this patch and see if it still crashes the same way or not?
Comment 3 Debarshi Ray 2016-06-22 10:25:14 UTC
Comment on attachment 330146 [details] [review]
item-manager: Fix the lifetime of the changes-pending handler

Pushed to master and gnome-3-20.